# ROBINsect

./: .gitignore
Android/: ROBINspect.sln
Android/ROBINspect/: AttributeListItemAdapter.cs  DiscoveryActivity.cs  EditAttributeDialogFragment.cs  MonitorActivity.cs  MonitorDetailFragment.cs  MonitorTreeFragment.cs  NodeListAdapter.cs  ParcelableDiscoverInfo.cs  ROBINspect.csproj  SimpleListItem2_Adapter.cs
Android/ROBINspect/Properties/: AndroidManifest.xml  AssemblyInfo.cs
Android/ROBINspect/Resources/: Resource.Designer.cs
Android/ROBINspect/Resources/layout/: AttributeListItem.axml  Discovery.axml  EditAttributeDialog.axml  Monitor.axml  MonitorDetail.axml
Android/ROBINspect/Resources/values/: Strings.xml
ROBINinspect/: Discovery.cs  Form1.Designer.cs  Form1.cs  Monitor.cs  Program.cs  ROBINinspect.csproj  ROBINinspect.sln  ROBINsect.xml  frmDiscovery.Designer.cs  frmDiscovery.cs  frmLogger.Designer.cs  frmLogger.cs  frmMonitor.Designer.cs  frmMonitor.cs
ROBINinspect/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
ROBINinspect/nodes/: AbstractNodes.cs  Attribute.cs  BaseNode.cs  BoolNode.cs  Flags.cs  FloatNode.cs  IntNode.cs  MirrorNode.cs  NodeFactory.cs  Pos3D_32f_Node.cs  StringNode.cs
ROBINinspect/nodes/xml/: nodeXmlConverter.cs
ROBINsim/: .gitignore
ROBINsim/Assets/Models/: ConnectingSection.dae  MidSection.dae  TipSection.dae
ROBINsim/Assets/Prefabs/: Leg.prefab  MirrorLeg.prefab  RobinInfo.prefab
ROBINsim/Assets/Scenes/: 3Dview.unity
ROBINsim/Assets/Scripts/: Animate.cs  AppLogic.cs  Discovery.cs  DiscoveryUI.cs  Kinematic.cs  Monitor.cs  MonitorUI.cs  RobotController.cs
ROBINsim/Assets/Scripts/nodes/: BaseNode.cs
ROBINsim/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
RapsPi/: CMakeLists.txt  make_script.sh
RapsPi/src/: LegKinematic.cpp  main.cpp  pca9685.h
RapsPi/src/communication/: Socket.hpp
raspPi/: CMakeLists.txt  make_script.sh  raspiMake.sh
raspPi/boot/: install_service.sh  robinsect.service
raspPi/src/: ROBINsect.xml  application.cpp  application.hpp  cmd.cpp  cmd.h  main.cpp  pca9685.cpp  servo.cpp  servo.h
raspPi/src/communication/: Socket.cpp  Socket.hpp
raspPi/src/modules/: CommandLineModule.cpp  CommandLineModule.hpp  ControllerModule.cpp  ControllerModule.hpp  DiscoveryModule.cpp  DiscoveryModule.hpp  InsectModule.cpp  InsectModule.hpp  Leg.cpp  Leg.hpp  LegKinematic.cpp  LegKinematic.hpp  Module.hpp  NetworkModule.cpp  NetworkModule.hpp  ServoModule.cpp  ServoModule.hpp  SystemModule.cpp  SystemModule.hpp  TcpSocketModule.cpp  TcpSocketModule.hpp  TelnetModule.cpp  TelnetModule.hpp  TrajectorySegment.hpp  XmlViewModule.cpp  XmlViewModule.hpp  constants.hpp  controller.cpp  controller.hpp  servo.cpp  servo.hpp
raspPi/src/modules/gait/: RippleGait.cpp  RippleGait.hpp  TripodGait.cpp  TripodGait.hpp  gait.cpp  gait.hpp
raspPi/src/modules/geometry/: line3d.hpp  plane3d.hpp
raspPi/src/modules/hardware/: LegKinematic.cpp  LegKinematic.h  pca9685.cpp  pca9685.h  pca9685.hpp
raspPi/src/modules/hardware/stub/: pca9685Stub.cpp
raspPi/src/modules/trajectory/: CircularTrajectorySegment.cpp  CircularTrajectorySegment.hpp  LinearTrajectorySegment.cpp  LinearTrajectorySegment.hpp  MultiTrajectorySegment.cpp  MultiTrajectorySegment.hpp  SplineTrajectorySegment.cpp  SplineTrajectorySegment.hpp  TrajectorySegment.cpp  TrajectorySegment.hpp
raspPi/src/nodes/: AbstractValueNode.hpp  Attribute.cpp  Attribute.hpp  BaseNode.cpp  BaseNode.hpp  BaseNodeImpl.hpp  BoolNode.hpp  Flags.hpp  MirrorNode.cpp  MirrorNode.hpp  NodeFactory.cpp  NodeFactory.hpp  NodeObserver.hpp  Nodes.hpp  NumericNode.cpp  NumericNode.hpp  Pos3D_32f_Node.hpp  StringNode.hpp
raspPi/src/nodes/xml/: nodeXmlConverter.cpp  nodeXmlConverter.hpp
raspPi/src/nodes/xml/rapidxml-1.13/: rapidxml_print.hpp
raspPi/src/test/: Test.cpp
raspPi/src/util/: BitmaskEnumClass.h
